--- a/heart_kaggle.ipynb
+++ b/heart_kaggle.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM+OpkTiXRi+nIsWWp1mH1m",
+      "authorship_tag": "ABX9TyNKcS4L3M7QKdDcCRdvuRbG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "YHTTGGQh_88f"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import numpy as np"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "dEvoBP_6BAhZ"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
