--- a/diabetis_kaggle.ipynb
+++ b/diabetis_kaggle.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM+OpkTiXRi+nIsWWp1mH1m",
+      "authorship_tag": "ABX9TyMAliOxsrS0QaTb0gfpWukk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "b21vghpLx-iy"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "01uX3faYyhsc"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
